# osintr

./: .gitignore  LICENSE  MANIFEST.in  README.md  agents.py  crew.py  google.py  main.py  prompts.py  pyproject.toml  requirements.txt  search.py  setup.py  tasks.py  test_api.py
0sintr/: OSINT_REPORT.md  agents.py  dirread.py  main.py  mdread.py  prompts.py  research.py  tasks.py
0sintr/db/: chroma.sqlite3
0sintr/tools/: dir_read.py  dirread.py  json_read.py  mdread.py
ai_logic/: agents.py  main.py  tasks.py
osint_data/: google_search.json
osintr/: __init__.py  main.py  mainv2.py  report_generator.py
osintr/docs/legacy/: README_legacy.md  main_legacy.py
osintr/modules/: match_emails.py  match_urls.py  report_generator.py  report_template.html
osintr/tests/: email_tests.py  firecrawl_tests.py  serpapi_tests.py  url_tests.py
tools/: google.py  validate_url.py
