[tool.poetry]
name = "osintr"
version = "0.2.0"
description = "Google Recursive Advanced Search & Scrape tool for OFM Stage 1."

license = "MIT"

authors = [
    "0SINTr"
]

repository = "https://github.com/0SINTr/osintr.git"
homepage = "https://github.com/0SINTr"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["OSINT"]

[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.10"
python-dotenv = ">=1.0.0"
firecrawl-py = ">=1.2.4"
Levenshtein = ">=0.26.0"
homoglyphs = ">=2.0.4"
jellyfish = ">=1.1.0"
requests = ">=2.32.3"
argparse = ">=1.4.0"
colorama = ">=0.4.6"
pandas = ">=2.2.3"

[tool.poetry.scripts]
osintr = 'osintr.main:main'